--- a/MovieDB/MovieDB.html
+++ b/MovieDB/MovieDB.html
@@ -18,9 +18,9 @@
         </p>
         <p class="filter">Sort by:
             <span id="sort_radios">
-                <label><input type="radio" name="sortby" checked=true value="sort_name" onclick="drawGraph()"/>Movie Names</label>
-                <label><input type="radio" name="sortby" value="sort_color" onclick="drawGraph()"/>Color Theme</label>
-                <label><input type="radio" name="sortby" value="sort_y" onclick="drawGraph()"/>Y Values</label>
+                <label><input type="radio" name="sortby" value="sort_name" onclick="drawGraph()"/>Movie Names</label>
+                <label><input type="radio" name="sortby" checked=true value="sort_color" onclick="drawGraph()"/>Color Theme</label>
+                <label><input type="radio" name="sortby" value="sort_y" onclick="drawGraph()"/>Revenue</label>
             </span>
             <label><input type="checkbox" name="sorted" checked=true onclick="drawGraph()" />Enable Sorting</label>
         </p>
