--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 <body>
 <h1 class="pagetitle">Visualization Projects</h1>
 <p>This is the initialization of the webpage. 这是初始化的页面。</p>
+
+<p> Current Project: </p>
+<ul class="prj-list">
+    <li><a href="MovieDB/MovieDB.html" title="My first visualization work">MovieDB (Loading may take time)</a></li>
+</ul>
+
 </body>
 </html>
