--- a/MovieDB/MovieDB.html
+++ b/MovieDB/MovieDB.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>TMDB 5000 Visualization -- wklchris</title>
+    <title>TMDB 5000 Visualization -- Kanglong Wu</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <script src="../assets/js/d3.v4.min.js"></script> 
