New Prj (TextFlow) milestone completed.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
 <h1 class="pagetitle">Visualization Projects</h1>
 <p>This is the initialization of the webpage. 这是初始化的页面。</p>
 
-<p> Current Project: </p>
+
+<div class="hline"></div>
+<h2> Current Project: </h2>
+<p> Some projects require a high resolution of your device. All projects are tested on a 1920x1080 screen. </p>
 <ul class="prj-list">
-    <li><a href="MovieDB/MovieDB.html" title="My first visualization work">MovieDB (Loading may take time)</a></li>
+    <li><a href="MovieDB/MovieDB.html" title="My first visualization work">MovieDB:</a> An interactive visualization of the movie dataset from Kaggle (see <a href="https://www.kaggle.com/rounakbanik/the-movies-dataset/data">here</a>). </li>
+    <li><a href="TextFlow/TextFlow.html" title="Implementation of TextFlow">TextFlow:</a> An implementation of paper: Cui, Weiwei, et al. "Textflow: Towards better understanding of evolving topics in text."<i>IEEE transactions on visualization and computer graphics</i> 17.12 (2011): 2412-2421.</li>
 </ul>
+
+
+<br /><div class="hline"></div>
+<p class="note">Maintained by <a href="https://github.com/wklchris">wklchris</a></p>
 
 </body>
 </html>
