--- a/TextFlow/TextFlow.html
+++ b/TextFlow/TextFlow.html
@@ -5,7 +5,7 @@
     <title>TextFlow -- Kanglong Wu, Shu Zhang</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <script src="assets/js/d3.v4.min.js"></script> 
+    <script src="../assets/js/d3.v4.min.js"></script> 
     <script src="assets/js/d3.layout.cloud.js"></script> 
 </head>
 
